--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -1,16 +1,19 @@
 <% include ../partials/header %>
 <div style="text-align:center" class="container">
   <h1><%= post.title %></h1>
-  <h5><%= post.year %></h5>
-  <img src="<%= post.image %>">
-  <p><%= post.plot %></p>
+  <h5 id="year"><%= post.year %></h5>
+  <img id="image" src="<%= post.image %>">
+  <p id="plot"><%= post.plot %></p>
+
+  <div class="button">
     <a href="/movies/<%= post._id %>/edit">
-      <button class="btn btn-primary">Edit Post</button>
+      <button id="edit" class="btn btn-primary">Edit Post</button>
     </a>
-    <!-- form need for deletee? -->
+
     <form class="delete-movie-form" action="/movies/<%= post._id %>?_method=DELETE" method="POST">
-    <button class="btn btn-danger">Delete Post</button>
+    <button id="delete" class="btn btn-danger">Delete Post</button>
   </form>
+</div>
   <% include ../comments/new %>
 </div>
 <% include ../partials/footer %>
