--- a/views/movies/search.ejs
+++ b/views/movies/search.ejs
@@ -12,7 +12,7 @@
   <body>
 
     <div class="container">
-      <h1> Search for a movie</h1>
+      <h1 id="search-heading"> Search for a Movie</h1>
       <input id="movie-search" type="text" placeholder="find movie">
       <button id="search-button" class="btn btn-primary">Search</button>
 
