--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,9 @@
             <% if(!currentUser){ %>
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/auth/facebook" id="facebook-button" class="btn btn-primary">Facebook</a></li>
             <% } else { %>
-                  <li><a href="#">User: <%= currentUser.username %></a></li>
+                  <li><a href="#">User: <%= currentUser.username %><%= currentUser.facebook.name %></a></li>
                   <li><a href="/logout">Logout</a></li>
             <% } %>
             </ul>
