--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,8 +20,11 @@
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/auth/facebook" id="facebook-button" class="btn btn-primary">Facebook</a></li>
-            <% } else { %>
-                  <li><a href="#">User: <%= currentUser.username %></a></li>
+            <% } else if (currentUser.facebook.name) { %>
+                  <li><a href="#">User Facebook: <%= currentUser.facebook.name %></a></li>
+                  <li><a href="/logout">Logout</a></li>
+            <% } else if (currentUser.username) { %>
+                  <li><a href="#">User Local: <%= currentUser.username %></a></li>
                   <li><a href="/logout">Logout</a></li>
             <% } %>
             </ul>
