--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -12,9 +12,12 @@
  <div id="commentary">
    <% for (var i = 0; i < post.comments.length; i++){  %>
 
-       <p> <strong><%= currentUser.username %>:</strong> <%= post.comments[i].text %>
+       <p> <strong><%= currentUser.facebook.name %>:</strong> <%= post.comments[i].text %>
           <button class="btn btn-warning btn-xs">Edit</button>
           <button class="btn btn-danger btn-xs">Delete</button>
         </p>
      <% } %>
    </div>
+
+
+<%= currentUser.facebook.name %>
