--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,11 @@
             <% if(!currentUser){ %>
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/signup">Sign Up</a></li>
-            <% } else { %>
+            <% } else if (currentUser.username) { %>
                   <li><a href="#">User: <%= currentUser.username %></a></li>
+                  <li><a href="/logout">Logout</a></li>
+            <% } else if (currentUser.facebook.name) { %>
+                  <li><a href="#">User: <%= currentUser.facebook.name %></a></li>
                   <li><a href="/logout">Logout</a></li>
             <% } %>
             </ul>
