--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,21 +2,15 @@
   text-align: center;
 }
 
-
 #greeting {
   text-align: center;
-  /*border: 1px solid black;*/
-  /*height: 400px;
-  width: 400px;
-  background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRVYFBUgg5Ey7fCM2o-wxUsd_-27DR0009DUJR3BCnwAvF1Yhj');
-  background-repeat:no-repeat;
-  background-size: 100%;
-  opacity: .6;*/
   color: rgb(255,120,120);
   font-family: 'Amatic SC', cursive;
   font-size: 50px;
 }
-
+.thumbnail{
+  background-color: yellow;
+}
 .username {
   height: 26px;
 }
@@ -26,16 +20,71 @@
 #caption {
   float: right;
 }
+
+
+
 #poster {
   text-align: center;
   width: 600px;
   background-color: grey;
 }
 
+
 #movie-result {
   text-align: center;
   width: 600px;
 }
+
+#commentary{
+  text-align: center;
+  font-size: 17px;
+}
+#plot{
+  padding-top: 15px;
+  padding-bottom: 10px;
+  font-size: 16px;
+}
+#year{
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+#edit{
+  font-size: 20px;
+}
+#delete{
+  font-size: 18px;
+}
+.btn{
+  margin: 6px;
+}
+#image{
+webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.70);
+moz-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.70);
+box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.70);
+}
+.navbar-default{
+  background-color: #FFD700;
+}
+.btn-info{
+  font-size: 16px;
+  font-family: Georgia, serif;
+}
+.btn-success{
+  font-family: Tahoma, Geneva, sans-serif;
+  font-size: 16px;
+  margin-top: 10px;
+}
+#search-heading{
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 45px;
+}
+#movie-search{
+  height: 28px;
+}
+#search-button{
+  font-family: Tahoma, Geneva, sans-serif;
+=======
 #save-post {
   text
+
 }
